Fixed layout for Windows.
There were a few layout issues after testing on Windows. Turns out that using a menubar on a dialog is not a good idea. Now the manager is more of a proper window, and it actually looks better. This is version 0.7 final.

--- a/skin/rxmManager.css
+++ b/skin/rxmManager.css
@@ -17,3 +17,7 @@
 #domains {
   height: 16em;
 }
+
+#window-content {
+  padding: 1em;
+}
